# htpy-lsp

./: .gitignore  LICENSE  README.md  demo_error.py  opencode.json  pyproject.toml  test_error.py
htpy_lsp/: main.py  validator.py
tests/: test_validator.py
