[project]
name = "htpy-lsp"
version = "0.1.0"
description = "LSP for validating htpy syntax rules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3.1",
    "lsprotocol>=2023.0.1",
]

[project.scripts]
htpy-lsp = "htpy_lsp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
